@@ -35,7 +35,7 @@ class DropDownListTestCase extends SeleniumTestCase
 
 		// Databind to an integer-indexed array
 		$this->selectAndWait("ctl0\$body\$DBDropDownList1", "label=item 3");
-		$this->verifyTextPresent("Your selection is: (Index: 2, Value: item 3, Text: item 3)", "");
+		$this->verifyTextPresent("Your selection is: (Index: 2, Value: 2, Text: item 3)", "");
 
 		// Databind to an associative array
 		$this->selectAndWait("ctl0\$body\$DBDropDownList2", "label=item 2");
